--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
       android:name=".MainApplication"
@@ -12,9 +13,11 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+        android:configChanges="locale|layoutDirection|fontScale|density|keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
+        android:resizeableActivity="true"
+        android:supportsPictureInPicture="true"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
