--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-vector-icons": "^10.0.3",
+    "rnt-video-player": "./RNTVideoPlayer"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,11 +24,14 @@
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "hint": "^7.1.11",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
